--- a/index.html
+++ b/index.html
@@ -54,31 +54,52 @@
   <section id="services">
     <div class="services container">
       <div class="service-top">
-        <h1 class="section-title">Certif<span>i</span>cates</h1>
-        <p>Here are the Certificates that I gained in the last 2 year by completing the online courses<p>
+        <h1 class="section-title">Certif<span>i</span>cates & <br> Trai<span>n</span>ing</h1> </h1>
+        <p>Here are the Certificates that I gained in the last 3 year by completing the online courses<p>
         </p>
       </div>
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="certi.png"></div>
-          <a href="https://drive.google.com/file/d/1AvyHzXUioMFiD75p5FyHqM23ywptS9Ng/view?usp=sharing"><h2>Certificate 1</h2></a>
+          <a href="https://drive.google.com/file/d/1AvyHzXUioMFiD75p5FyHqM23ywptS9Ng/view?usp=sharing"><h2><div class="certificates">Coding Ninjas Certification</div></h2></a>
           <p>I have completed the Course Data Structures and Algorithum in C++ by Coding Ninjas..In the duration of about 4 months.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="certi.png" /></div>
-          <a href="https://drive.google.com/file/d/1e8kRgZARoxhBDLjBYbA0T9GFE91OAT6J/view?usp=sharing"><h2>Certificate 2</h2></a>
+          <a href="https://drive.google.com/file/d/1e8kRgZARoxhBDLjBYbA0T9GFE91OAT6J/view?usp=sharing"><h2><div class="certificates">Coding Ninjas Certification</div></h2></a>
           <p>I have completed the Course Introduction to C++ by Coding Ninjas..In the duration of about 2 months.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="certi.png" /></div>
-          <a href="https://drive.google.com/file/d/1QgafH0uA7iUGOtVhb4f3QL2_pI2fr4uV/view?usp=sharing"><h2>Certificate 3</h2></a>
+          <a href="https://drive.google.com/file/d/1QgafH0uA7iUGOtVhb4f3QL2_pI2fr4uV/view?usp=sharing"><h2><div class="certificates">Coursera Certification</div></h2></a>
           <p>I have succesfully completed the course C for Everyone: Programming Fundamentals by Coursera</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="certi.png" /></div>
-          <a href="https://drive.google.com/file/d/1Yr69gnri9bRHGC2LBafNR9ntuOwcH78R/view?usp=sharing"><h2>Certificate 4</h2></a>
+          <a href="https://drive.google.com/file/d/1Yr69gnri9bRHGC2LBafNR9ntuOwcH78R/view?usp=sharing"><h2><div class="certificates">College Certification</div></h2></a>
           <p>I have succesfully completed the Level--3 in C programming language in my college E-lab..In my Sceond semester</p>
         </div>
+        <div class="service-item">
+          <div class="icon"><img src="certi.png" /></div>
+          <a href="https://drive.google.com/file/d/1NIhkbOq9TTZ_M2dVN27pRJeDOxQOzk19/view?usp=sharing"><h2> <div class="certificates">CISCO Certification</div></h2></a>
+          <p>I have succesfully completed the course JavaScript Essentials by CISCO </p>
+        </div>
+        <div class="service-item">
+          <div class="icon"><img src="certi.png" /></div>
+          <a href="https://drive.google.com/file/d/1fxLMUq0uabPKIwd0GPXR3YSmxU6HnMer/view?usp=sharing"><h2> <div class="certificates">IBM Certification </div></h2></a>
+          <p>I have succesfully completed IBM Artificial Intelligence Concepts provited by IBM in my 3rd year.</p>
+        </div>
+        <div class="service-item">
+          <div class="icon"><img src="certi.png" /></div>
+          <a href="https://drive.google.com/file/d/1VvAuQWiM3L-_CN6s9vz_woaLkW1RU3mq/view?usp=sharing"><h2><div class="certificates">MATLAB Certification</div></h2></a>
+          <p>I have succesfully completed the course MATLAB ONRAMP provided by Matlab</p>
+        </div>
+        <div class="service-item">
+          <div class="icon"><img src="certi.png" /></div>
+          <a href="https://drive.google.com/file/d/1SyT5xLxTYudhOCUJSJ1OVoLogoh9TBQO/view?usp=sharing"><h2><div class="certificates">MATLAB Certification</div></h2></a>
+          <p>I have succesfully completed the cource Image Processing Onramp by Matlab in my 3rd year</p>
+        </div>
+        
       </div>
     </div>
   </section>
