--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
-        <h1>Vasu <span></span></h1>
+        <h1> Vasu</h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
-      <div class="profile"><img src="profile.jpeg" alt="" height="40px" width="40px"></div>
+      <div class="profile"><img src="Images/profile.jpeg" alt="" height="40px" width="40px"></div>
     </div>
   </section>
   <!-- End Hero Section  -->
@@ -60,42 +60,42 @@
       </div>
       <div class="service-bottom">
         <div class="service-item">
-          <div class="icon"><img src="certi.png"></div>
+          <div class="icon"><img src="Images/certi.png"></div>
           <a href="https://drive.google.com/file/d/1AvyHzXUioMFiD75p5FyHqM23ywptS9Ng/view?usp=sharing"><h2><div class="certificates">Coding Ninjas Certification</div></h2></a>
           <p>I have completed the Course Data Structures and Algorithum in C++ by Coding Ninjas..In the duration of about 4 months.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="certi.png" /></div>
+          <div class="icon"><img src="Images/certi.png" /></div>
           <a href="https://drive.google.com/file/d/1e8kRgZARoxhBDLjBYbA0T9GFE91OAT6J/view?usp=sharing"><h2><div class="certificates">Coding Ninjas Certification</div></h2></a>
           <p>I have completed the Course Introduction to C++ by Coding Ninjas..In the duration of about 2 months.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="certi.png" /></div>
+          <div class="icon"><img src="Images/certi.png" /></div>
           <a href="https://drive.google.com/file/d/1QgafH0uA7iUGOtVhb4f3QL2_pI2fr4uV/view?usp=sharing"><h2><div class="certificates">Coursera Certification</div></h2></a>
           <p>I have succesfully completed the course C for Everyone: Programming Fundamentals by Coursera</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="certi.png" /></div>
+          <div class="icon"><img src="Images/certi.png" /></div>
           <a href="https://drive.google.com/file/d/1Yr69gnri9bRHGC2LBafNR9ntuOwcH78R/view?usp=sharing"><h2><div class="certificates">College Certification</div></h2></a>
           <p>I have succesfully completed the Level--3 in C programming language in my college E-lab..In my Sceond semester</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="certi.png" /></div>
+          <div class="icon"><img src="Images/certi.png" /></div>
           <a href="https://drive.google.com/file/d/1NIhkbOq9TTZ_M2dVN27pRJeDOxQOzk19/view?usp=sharing"><h2> <div class="certificates">CISCO Certification</div></h2></a>
           <p>I have succesfully completed the course JavaScript Essentials by CISCO </p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="certi.png" /></div>
+          <div class="icon"><img src="Images/certi.png" /></div>
           <a href="https://drive.google.com/file/d/1fxLMUq0uabPKIwd0GPXR3YSmxU6HnMer/view?usp=sharing"><h2> <div class="certificates">IBM Certification </div></h2></a>
           <p>I have succesfully completed IBM Artificial Intelligence Concepts provited by IBM in my 3rd year.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="certi.png" /></div>
+          <div class="icon"><img src="Images/certi.png" /></div>
           <a href="https://drive.google.com/file/d/1VvAuQWiM3L-_CN6s9vz_woaLkW1RU3mq/view?usp=sharing"><h2><div class="certificates">MATLAB Certification</div></h2></a>
           <p>I have succesfully completed the course MATLAB ONRAMP provided by Matlab</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="certi.png" /></div>
+          <div class="icon"><img src="Images/certi.png" /></div>
           <a href="https://drive.google.com/file/d/1SyT5xLxTYudhOCUJSJ1OVoLogoh9TBQO/view?usp=sharing"><h2><div class="certificates">MATLAB Certification</div></h2></a>
           <p>I have succesfully completed the cource Image Processing Onramp by Matlab in my 3rd year</p>
         </div>
@@ -119,7 +119,7 @@
             <p>I have built a WhatsApp Web UI Clone by using the technologies HTML,CSS and Bootstrap.It include a new feature in which you can pin a message in chat box.</p>
           </div>
           <div class="project-img">
-            <img src="project1.png" alt="img" >
+            <img src="Images/project1.png" alt="img" >
           </div>
         </div>
         </div>
@@ -133,7 +133,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="sidephoto.jpeg.crdownload" alt="img">
+          <img src="Images/sidephoto.jpeg.crdownload" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -173,7 +173,7 @@
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="github.jpg" /></div>
+          <div class="icon"><img src="Images/github.jpg" /></div>
           <div class="contact-info">
             <h1>GitHub and LinkedIn Link</h1>
             <H2>My Github Link - </H2><a href="https://github.com/vasugoel89"><h2>/vasugoel89</h2></a>
@@ -190,9 +190,8 @@
     <div class="footer container">
       <div class="brand">
         <h1><span>V</span>asu <span>G</span>oel</h1>
-     
-      
     </div>
+    <p>A Believer, an ongoing Learner, a man of Generosity, a Strength you can count on during tough times, one that adapts to any Situation, a Humble man with Humble needs .</p>
   </section>
   <!-- End Footer -->
   <script src="./app.js"></script>
